# azureml-template

./: Makefile  README.md
consumer/: Makefile  README.md  deploy.sh  gen_ts.sh  make_aml_ws.json  make_aml_ws_template.json
consumer/pipelines/: pipeline.yml
lightgbm-template/: README.md
lightgbm-template/consumer/: Makefile  README.md  deploy.sh  make_aml_ws.json  make_aml_ws_template.json
lightgbm-template/consumer/pipelines/: pipeline.yml
lightgbm-template/provider/: .gitignore  README.md  registry.yml
lightgbm-template/provider/components/: preprocess.yml  train.yml
lightgbm-template/provider/machine_learning/: .gitignore  README.md  pyproject.toml
lightgbm-template/provider/machine_learning/src/usecase/: evaluate_usecase.py  predict_usecase.py  preprocess_usecase.py  train_usecase.py
lightgbm-template/provider/pipelines/: pipeline_template.yml
provider/: Makefile  README.md  environment.yml
provider/components/: evaluate.yml  predict.yml  preprocess.yml  train.yml
provider/machine_learning/: Dockerfile  Makefile  mypy.ini  pyproject.toml
provider/machine_learning/src/: __main__.py
provider/machine_learning/src/handler/: handler.py
provider/machine_learning/src/usecase/: preprocess_usecase.py
