[tool.poetry]
name = "lightgbm_template"
version = "0.3.0"
description = "lightgbm_template"
authors = ["ayukat101699@gmail.com"]
readme = "README.md"
packages = [{include = "lightgbm_template"}]

[tool.poetry.dependencies]
python = "^3.9.16"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
lightgbm = "^3.3.5"
fire = "^0.5.0"
mlflow = "^2.2.1"
azureml-mlflow = "^1.49.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
